Thu Jun 26 16:37:50 2003  Jonathan Blandford  <jrb@redhat.com>

	* Makefile.am (SUBDIRS): add typing-break to subdirs.

Thu Jun 26 07:38:45 2003  Jonathan Blandford  <jrb@gnome.org>

	* typing-break/drwright.c: added the typing break to CVS from
	drwright.

2003-06-24  Jody Goldberg <jody@gnome.org>

	* configure.in : post release version bump

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-06-15  Taneem Ahmed  <taneem@eyetap.org>

	* configure.in: Added "bn" to ALL_LINGUAS.

2003-06-03  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* .cvsignore:
	* capplets/common/.cvsignore:
	* schemas/.cvsignore:
	* vfs-methods/.cvsignore: Quiet cvs.

	* capplets/common/Makefile.am: fix parallel build.

	* capplets/common/gnome-theme-apply.c: add missing header.

2003-05-23  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "id" "th" to ALL_LINGUAS.

Tue May 20 19:14:19 2003  Jonathan Blandford  <jrb@redhat.com>

	* configure.in: 2.3.2 released.

Tue May 20 12:43:59 2003  Jonathan Blandford  <jrb@redhat.com>

	* configure.in (FONTILUS): add fontilus support.
	* vfs-methods/Makefile.am: add fontilus support.
	* vfs-methods/fontilus/Makefile.am: add fontilus support.

2003-05-14  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "sr" "sr@Latn" to ALL_LINGUAS.

2003-05-13  Andrew Sobala  <aes@gnome.org>

	* Makefile.am: added themus support
	* configure.in:	added themus support
	* vfs-methods/Makefile.am: added

2003-05-12  Marco Pesenti Gritti  <marco@it.gnome.org>

	* capplets/file-types/service-info.c: (service_info_save),
	(service_info_delete):

	Set the enabled key for new services and unset it on delete

2003-05-07  Jody Goldberg <jody@gnome.org>

	* configure.in : post release version bump

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-05-02  Ross Burton  <ross@burtonini.com>

	* configure.in: Generate the Makefile I added last night. Whoops.

2003-04-30  Kjartan Maraas  <kmaraas@gnome.org>
