@@ -1,6 +1,6 @@
 /* -*- Mode: C; tab-width: 8; indent-tabs-mode: t; c-basic-offset: 8 -*- */
 /*
- * Copyright (C) 2002 Richard Hult <rhult@codefactory.se>
+ * Copyright (C) 2002 Richard Hult <richard@imendio.com>
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -21,8 +21,10 @@
 #ifndef __DR_WRIGHT_H__
 #define __DR_WRIGHT_H__
 
+#define GCONF_PATH "/desktop/gnome/typing_break"
+
 typedef struct _DrWright DrWright;
 
-DrWright *         drwright_new            (void);
+DrWright *drwright_new (void);
 
 #endif /* __DR_WRIGHT_H__ */
