@@ -1,7 +1,7 @@
 /* -*- Mode: C; tab-width: 8; indent-tabs-mode: t; c-basic-offset: 8 -*- */
 /*
  * Copyright (C) 2002 CodeFactory AB
- * Copyright (C) 2002-2003 Richard Hult <rhult@codefactory.se>
+ * Copyright (C) 2002-2003 Richard Hult <richard@imendio.com>
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -24,7 +24,7 @@
 #include <gdk/gdkx.h>
 #include <gtk/gtk.h>
 #include <libgnomeui/libgnomeui.h>
-#include "drw-intl.h"
+#include <libgnome/gnome-i18n.h>
 #include "drw-selection.h"
 #include "drwright.h"
 
