@@ -1,3 +1,14 @@
+2003-06-27  Richard Hult  <richard@imendio.com>
+
+	* typing-break/drw-intl.h: Remove this and use gnome-i18n.h
+	instead.
+
+	* typing-break/Makefile.am: Remove drw-intl.h
+	
+	* typing-break/drwright.c:
+	* typing-break/drwright.h:
+	* typing-break/drw-break-window.c: Merge in changes from drwright.
+
 Thu Jun 26 16:37:50 2003  Jonathan Blandford  <jrb@redhat.com>
 
 	* Makefile.am (SUBDIRS): add typing-break to subdirs.
